--- a/index.html
+++ b/index.html
@@ -89,32 +89,47 @@
 								<h3 class="text-uppercase resume-section-heading mb-3">Award</h3>
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
-										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0"><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
-										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">2022</div>
-										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0"><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association</div>
-										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">2022</div>
-										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0"><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU</div>
-										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">2022</div>
-										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0"><strong>Graduate Outstanding Research Award</strong>,  The Society for Personality and Social Psychology</div>
-										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">2020</div>
-										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0"><strong>The College Graduate Excellence Award</strong>, ASU</div>
-										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">2018, 2020, 2022</div>
-										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0"><strong>JumpStart Seed Research Grant</strong>, ASU Graduate and Professional Student Association</div>
-										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">2018</div>
-										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0"><strong>Research Excellence Award</strong>, Department of Psychology, ASU</div>
-										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">2017</div>
-										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0"><strong>Brain Korea 21+ Scholarship</strong>, Ministry of Science, ICT, and Future Planning</div>
-										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">2015-2017</div>
+										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+											<strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
+										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+											2022</div>
+										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0"><
+											strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association</div>
+										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+											2022</div>
+										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+											<strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU</div>
+										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+											2022</div>
+										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+											<strong>Graduate Outstanding Research Award</strong>,  The Society for Personality and Social Psychology</div>
+										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+											2020</div>
+										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+											<strong>The College Graduate Excellence Award</strong>, ASU</div>
+										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+											2018, 2020, 2022</div>
+										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+											<strong>JumpStart Seed Research Grant</strong>, ASU Graduate and Professional Student Association</div>
+										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+											2018</div>
+										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+											<strong>Research Excellence Award</strong>, Department of Psychology, ASU</div>
+										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+											2017</div>
+										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+											<strong>Brain Korea 21+ Scholarship</strong>, Ministry of Science, ICT, and Future Planning</div>
+										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+											2015-2017</div>
 									</div>
 								</div><!--//item-->
 							</section><!--//award-section-->
 
 							<section class="pulication-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-3">paper published & invited revision</h3>
+								<h3 class="text-uppercase resume-section-heading col-12 col-md-4 col-lg-6 mb-3">paper published & invited revision</h3>
+								<div class="item-meta col-12 col-md-8 col-lg-6 text-muted text-start text-md-end">[2-year impact factor; Journal Citation Reports 2022]</div>
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
-										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"> </div>
-										<div class="item-meta col-12 col-md-8 col-lg-6 text-muted text-start text-md-end">[2-year impact factor; Journal Citation Reports 2022]</div>
 										<div class="item-content">
 											<p>9. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (revision under review). <strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>. <i>PNAS (Proceedings of the National Academy of Science)</i> [12.78]</p>
 											<p>8. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (accepted with minor revision). <strong>Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value</strong>. <i>Journal of Happiness Studies</i>. [4.09]</p>
@@ -135,10 +150,10 @@
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content">
-											<p>Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong> , Pick, C. M., & Varnum, M. E. W. (submitted) Sibling aggression is surprisingly common and sexually egalitarian. OSF </p>
-											<p><strong>Ko, A.</strong>  & Neuberg, S. L. (paper fully drafted) Ecological affordances: What they are, and how people manage them, differs by life stage. </p>
-											<p><strong>Ko, A.</strong> , Becker, D. V., & Neuberg, S. L. (five datasets collected and being analyzed) How do people judge diversity and fairness?</p>
-											<p><strong>Ko, A.</strong> & Neuberg, S. L. (six-wave longitudinal panel data collected and being analyzed) Intrapersonal calibration of motivations.</p>
+											<p>4. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong> , Pick, C. M., & Varnum, M. E. W. (submitted) Sibling aggression is surprisingly common and sexually egalitarian. OSF </p>
+											<p>3. <strong>Ko, A.</strong>  & Neuberg, S. L. (paper fully drafted) Ecological affordances: What they are, and how people manage them, differs by life stage. </p>
+											<p>2. <strong>Ko, A.</strong> , Becker, D. V., & Neuberg, S. L. (five datasets collected and being analyzed) How do people judge diversity and fairness?</p>
+											<p>1. <strong>Ko, A.</strong> & Neuberg, S. L. (six-wave longitudinal panel data collected and being analyzed) Intrapersonal calibration of motivations.</p>
 									 </div>
 								 </div><!--//item-->
 							 </div>
