--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 											<strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
 											2022</div>
-										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0"><
-											strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association</div>
+										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+											<strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association</div>
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
 											2022</div>
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
@@ -126,10 +126,11 @@
 							</section><!--//award-section-->
 
 							<section class="pulication-section py-3">
-								<h3 class="text-uppercase resume-section-heading col-12 col-md-4 col-lg-6 mb-3">paper published & invited revision</h3>
-								<div class="item-meta col-12 col-md-8 col-lg-6 text-muted text-start text-md-end">[2-year impact factor; Journal Citation Reports 2022]</div>
+								<h3 class="text-uppercase resume-section-heading mb-3">paper published & invited revision</h3>
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
+										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
+										<div class="item-meta col-12 col-md-8 col-lg-6 text-muted text-start text-md-end">[2-year impact factor; Journal Citation Reports 2022]</div>
 										<li class="item-content">
 											<li>9. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (revision under review). </li>
 											<li><strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>. <i>PNAS (Proceedings of the National Academy of Science)</i> [12.78]</li>
