--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
 										<div class="item-meta col-12 col-md-8 col-lg-6 text-muted text-start text-md-end">[2-year impact factor; Journal Citation Reports 2022]</div>
-										<li class="item-content">
-											<li>9. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (revision under review). </li>
-											<li><strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>. <i>PNAS (Proceedings of the National Academy of Science)</i> [12.78]</li>
+										<div class="item-content">
+											<p>9. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (revision under review).
+												<br> <strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>. <i>PNAS (Proceedings of the National Academy of Science)</i> [12.78]</br></p>
 											<p>8. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (accepted with minor revision). <strong>Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value</strong>. <i>Journal of Happiness Studies</i>. [4.09]</p>
 											<p>7. Pick, C. M., <strong>Ko, A.</strong>, Wormley, A. S., Wiezel, A., Kenrick, D. T., … & Varnum, M. E. W. (2022). <strong>Family still matters: Human social motivation during a global pandemic</strong>. <i>Evolution and Human Behavior, 43</i>(6), 527-535. [5.33]</p>
 										 	<p>6. Pick, C. M., <strong>Ko, A.</strong>, Kenrick, D. T., … & Varnum, M. E. W. (2022). <strong>Fundamental social motives measured across forty-two cultures in two waves</strong>. <i>Scientific Data, 9</i>(1), 1-12. Link OSF [8.50] </p>
@@ -142,7 +142,7 @@
 										 	<p>3. <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). <strong>Family matters: Rethinking the psychology of human social motivation</strong>. <i>Perspectives on Psychological Science, 15</i>(1), 173-201. [11.62]</p>
 										 	<p>2. Becker, D. V., Rheem, H., Pick, C. M., <strong>Ko, A.</strong>, & Lafko, S. R. (2019). <strong>Angry faces hold attention: Evidence of attentional adhesion in two paradigms</strong>. <i>Progress in Brain Research, 247</i>. [2.62]</p>
 										 	<p>1. <strong>Ko, A.</strong>, & Suh, E. M. (2019). <strong>Does physical attractiveness buy happiness? Women’s mating motivation and happiness</strong>. <i>Motivation and Emotion, 43</i>(1), 1–11. [4.14]</p>
-									 </li>
+									 </div>
 								 </div><!--//item-->
 							 </div>
 							</section><!--//pulication-section-->
