--- a/index.html
+++ b/index.html
@@ -133,23 +133,32 @@
 										<div class="item-meta col-12 col-md-8 col-lg-6 text-muted text-start text-md-end">[2-year impact factor; Journal Citation Reports 2022]</div>
 										<div class="item-content">
 											<p>09. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (revision under review).
-												<br/><strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>. <i>PNAS (Proceedings of the National Academy of Science)</i> [12.78]</p>
+												<br/><strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>.
+												<br/><i>PNAS (Proceedings of the National Academy of Science)</i> [12.78]</p>
 											<p>08. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (accepted with minor revision).
-												<br/><strong>Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value</strong>. <i>Journal of Happiness Studies</i>. [4.09]</p>
+												<br/><strong>Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value</strong>.
+												<br/><i>Journal of Happiness Studies</i>. [4.09]</p>
 											<p>07. Pick, C. M., <strong>Ko, A.</strong>, Wormley, A. S., Wiezel, A., Kenrick, D. T., … & Varnum, M. E. W. (2022).
-												<br/><strong>Family still matters: Human social motivation during a global pandemic</strong>. <i>Evolution and Human Behavior, 43</i>(6), 527-535. [5.33]</p>
+												<br/><strong>Family still matters: Human social motivation during a global pandemic</strong>.
+												<br/><i>Evolution and Human Behavior, 43</i>(6), 527-535. [5.33]</p>
 										 	<p>06. Pick, C. M., <strong>Ko, A.</strong>, Kenrick, D. T., … & Varnum, M. E. W. (2022).
-												<br/><strong>Fundamental social motives measured across forty-two cultures in two waves</strong>. <i>Scientific Data, 9</i>(1), 1-12. Link OSF [8.50]</p>
+												<br/><strong>Fundamental social motives measured across forty-two cultures in two waves</strong>. <i>Scientific Data, 9
+												<br/></i>(1), 1-12. Link OSF [8.50]</p>
 										 	<p>05. Barlev, M., <strong>Ko, A.</strong>, Krems, J. A., & Neuberg, S. L. (2022).
-												<br/><strong>Weight location moderates weight-based self-devaluation and perceived social devaluation in women</strong>. <i>Social Psychological and Personality Science, 19485506211060724</i>. [5.32] </p>
+												<br/><strong>Weight location moderates weight-based self-devaluation and perceived social devaluation in women</strong>.
+												<br/><i>Social Psychological and Personality Science, 19485506211060724</i>. [5.32] </p>
 										 	<p>04. Krems, J. A., <strong>Ko, A.</strong>, Moon, J. W., & Varnum, M. E. W. (2021).
-												<br/><strong>Sexually unrestricted women are perceived as having low self-esteem: First evidence for a pervasive, robust (but unfounded) stereotype</strong>. <i>Psychological Science, 32</i>(6), 871-889. [10.17]</p>
+												<br/><strong>Sexually unrestricted women are perceived as having low self-esteem: First evidence for a pervasive, robust (but unfounded) stereotype</strong>.
+												<br/><i>Psychological Science, 32</i>(6), 871-889. [10.17]</p>
 										 	<p>03. <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020).
-												<br/><strong>Family matters: Rethinking the psychology of human social motivation</strong>. <i>Perspectives on Psychological Science, 15</i>(1), 173-201. [11.62]</p>
+												<br/><strong>Family matters: Rethinking the psychology of human social motivation</strong>.
+												<br/><i>Perspectives on Psychological Science, 15</i>(1), 173-201. [11.62]</p>
 										 	<p>02. Becker, D. V., Rheem, H., Pick, C. M., <strong>Ko, A.</strong>, & Lafko, S. R. (2019).
-												<br/><strong>Angry faces hold attention: Evidence of attentional adhesion in two paradigms</strong>. <i>Progress in Brain Research, 247</i>. [2.62]</p>
+												<br/><strong>Angry faces hold attention: Evidence of attentional adhesion in two paradigms</strong>.
+												<br/><i>Progress in Brain Research, 247</i>. [2.62]</p>
 										 	<p>01. <strong>Ko, A.</strong>, & Suh, E. M. (2019).
-												<br/><strong>Does physical attractiveness buy happiness? Women’s mating motivation and happiness</strong>. <i>Motivation and Emotion, 43</i>(1), 1–11. [4.14]</p>
+												<br/><strong>Does physical attractiveness buy happiness? Women’s mating motivation and happiness</strong>.
+												<br/><i>Motivation and Emotion, 43</i>(1), 1–11. [4.14]</p>
 									 </div>
 								 </div><!--//item-->
 							 </div>
