--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
 							<section class="pulication-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-3">paper published & invited revision</h3>
 								<div class="item mb-2">
-									<div class="item-heading row align-items-center mb-1">
+									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
 										<div class="item-meta col-12 col-md-8 col-lg-6 text-muted text-start text-md-end">[2-year impact factor; Journal Citation Reports 2022]</div>
-										<div class="item-content">
+										<div class="item-content mb-0">
 											<p>09. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (revision under review).
 												<br/><strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>.
 												<br/><i>PNAS (Proceedings of the National Academy of Science)</i> [12.78]</p>
