--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
 										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
 										<div class="item-meta col-12 col-md-8 col-lg-6 text-muted text-start text-md-end">[2-year impact factor; Journal Citation Reports 2022]</div>
 										<div class="item-content mb-0">
-											<p>09. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (revision under review).
-												<br/><strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>.
-												<br/><i>PNAS (Proceedings of the National Academy of Science)</i> [12.78]</p>
+											<p>09. <strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>.
+												<br/><strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (revision under review).
+												<i>PNAS (Proceedings of the National Academy of Science)</i> [12.78]</p>
 											<p>08. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (accepted with minor revision).
 												<br/><strong>Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value</strong>.
 												<br/><i>Journal of Happiness Studies</i>. [4.09]</p>
