--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
 										<div class="item-meta col-12 col-md-8 col-lg-6 text-muted text-start text-md-end">[2-year impact factor; Journal Citation Reports 2022]</div>
-										<div class="item-content mb-0">
-											<p>09. <strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>.
-												<br/><strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (revision under review).
+										<div class="item-content mb-0" style="text-indent: -36px; padding-left: 36px;">
+											<p>09. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (revision under review).
+												<strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>.
 												<i>PNAS (Proceedings of the National Academy of Science)</i> [12.78]</p>
 											<p>08. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (accepted with minor revision).
-												<br/><strong>Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value</strong>.
-												<br/><i>Journal of Happiness Studies</i>. [4.09]</p>
+												<strong>Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value</strong>.
+												<i>Journal of Happiness Studies</i>. [4.09]</p>
 											<p>07. Pick, C. M., <strong>Ko, A.</strong>, Wormley, A. S., Wiezel, A., Kenrick, D. T., … & Varnum, M. E. W. (2022).
 												<br/><strong>Family still matters: Human social motivation during a global pandemic</strong>.
 												<br/><i>Evolution and Human Behavior, 43</i>(6), 527-535. [5.33]</p>
