--- a/index.html
+++ b/index.html
@@ -177,15 +177,34 @@
 								<h3 class="text-uppercase resume-section-heading mb-3">paper SUBMITTED & IN PREPARATION</h3>
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
-										<div class="item-content">
-											<p>4. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong> , Pick, C. M., & Varnum, M. E. W. (submitted) Sibling aggression is surprisingly common and sexually egalitarian. OSF </p>
-											<p>3. <strong>Ko, A.</strong>  & Neuberg, S. L. (paper fully drafted) Ecological affordances: What they are, and how people manage them, differs by life stage. </p>
-											<p>2. <strong>Ko, A.</strong> , Becker, D. V., & Neuberg, S. L. (five datasets collected and being analyzed) How do people judge diversity and fairness?</p>
-											<p>1. <strong>Ko, A.</strong> & Neuberg, S. L. (six-wave longitudinal panel data collected and being analyzed) Intrapersonal calibration of motivations.</p>
+										<div class="item-content" style="padding-left: 48px; text-indent: -28px;">
+											<p>4. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong> , Pick, C. M., & Varnum, M. E. W. (submitted)
+												<strong>Sibling aggression is surprisingly common and sexually egalitarian</strong>.  </p>
+											<p>3. <strong>Ko, A.</strong>  & Neuberg, S. L. (paper fully drafted)
+												<strong>Ecological affordances: What they are, and how people manage them, differs by life stage</strong>. </p>
+											<p>2. <strong>Ko, A.</strong> , Becker, D. V., & Neuberg, S. L. (five datasets collected and being analyzed)
+												<strong>How do people judge diversity and fairness?</strong></p>
+											<p>1. <strong>Ko, A.</strong> & Neuberg, S. L. (six-wave longitudinal panel data collected and being analyzed)
+												<strong>Intrapersonal calibration of motivations</strong>.</p>
 									 </div>
 								 </div><!--//item-->
 							 </div>
 							</section><!--//pulication-section-->
+
+							<section class="conference-section py-3">
+								<h3 class="text-uppercase resume-section-heading mb-3">Conference</h3>
+								<div class="item mb-3">
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-title">Symposium Organizing</h4>
+									</div>
+									<div class="item-content">
+										<p>Chair, “COVID, Disease Psychology, and Politics” (June, 2022). Human Behavior & Evolution Society Conference, Virtual.</p>
+										<ul class="resume-list">
+											<li>Speakers: Ahra Ko, Michael Bang Peterson, Lene Aarøe, Lei Fan.</li>
+										</ul>
+									</div>
+								</div><!--//item-->
+							</section><!--//conference-section-->
 
 						</div><!--//resume-main-->
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
