--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 								<h3 class="text-uppercase resume-section-heading mb-3">paper SUBMITTED & IN PREPARATION</h3>
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
-										<div class="item-content" style="padding-left: 48px; text-indent: -28px;">
+										<div class="item-content" style="padding-left: 45px; text-indent: -25px;">
 											<p>4. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong> , Pick, C. M., & Varnum, M. E. W. (submitted)
 												<strong>Sibling aggression is surprisingly common and sexually egalitarian</strong>.  </p>
 											<p>3. <strong>Ko, A.</strong>  & Neuberg, S. L. (paper fully drafted)
@@ -246,6 +246,25 @@
 										</ul>
 									</section><!--//talk-section-->
 
+									<section class="RA-section py-3">
+										<h3 class="text-uppercase resume-section-heading mb-3">Grant RA</h3>
+										<ul class="list-unstyled resume-education-list">
+											<li class="mb-1">
+												<div class="resume-degree font-weight-bold">National Science Foundation Grant</div>
+												<div class="resume-degree-org text-muted">RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health</div>
+												<div class="resume-degree-time text-muted">Steven L. Neuberg (PI), Michael E. W. Varnum, & D. Vaughn Becker</div>
+											</li>
+											<li class="mb-1">
+												<div class="resume-degree font-weight-bold">Douglas T. Kenrick</div>
+												<div class="resume-degree-org text-muted">President’s Professor of Psychology</div>
+												<div class="resume-degree-time text-muted">douglas.kenrick@asu.edu</div>
+											</li>
+											<li class="mb-1">
+												<div class="resume-degree font-weight-bold">Michael E. W. Varnum</div>
+												<div class="resume-degree-org text-muted">Associate Professor of Psychology</div>
+												<div class="resume-degree-time text-muted">mvarnum@asu.edu</div>
+											</li>
+										</ul>
 
 									<section class="skills-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-3">Language</h3>
