--- a/index.html
+++ b/index.html
@@ -250,19 +250,14 @@
 										<h3 class="text-uppercase resume-section-heading mb-3">Grant RA</h3>
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-1">
-												<div class="resume-degree font-weight-bold">National Science Foundation Grant</div>
-												<div class="resume-degree-org text-muted">RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health</div>
-												<div class="resume-degree-time text-muted">Steven L. Neuberg (PI), Michael E. W. Varnum, & D. Vaughn Becker</div>
+												<div class="resume-degree font-weight-bold">[NSF] RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health</div>
+												<div class="resume-degree-org text-muted">Steven L. Neuberg (PI), Michael E. W. Varnum, & D. Vaughn Becker</div>
+												<div class="resume-degree-time text-muted">2020-2022</div>
 											</li>
 											<li class="mb-1">
-												<div class="resume-degree font-weight-bold">Douglas T. Kenrick</div>
-												<div class="resume-degree-org text-muted">President’s Professor of Psychology</div>
-												<div class="resume-degree-time text-muted">douglas.kenrick@asu.edu</div>
-											</li>
-											<li class="mb-1">
-												<div class="resume-degree font-weight-bold">Michael E. W. Varnum</div>
-												<div class="resume-degree-org text-muted">Associate Professor of Psychology</div>
-												<div class="resume-degree-time text-muted">mvarnum@asu.edu</div>
+												<div class="resume-degree font-weight-bold">[NSF] Fundamental Social Motives and Subjective Well-being Around the World</div>
+												<div class="resume-degree-org text-muted">Michael E. W. Varnum (PI) & Douglas T. Kenrick</div>
+												<div class="resume-degree-time text-muted">2018-2021</div>
 											</li>
 										</ul>
 
