--- a/index.html
+++ b/index.html
@@ -247,16 +247,16 @@
 									</section><!--//talk-section-->
 
 									<section class="RA-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-3">Grant RA</h3>
+										<h3 class="text-uppercase resume-section-heading mb-3">Research Assistant</h3>
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">[NSF] RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health</div>
-												<div class="resume-degree-org text-muted">Steven L. Neuberg (PI), Michael E. W. Varnum, & D. Vaughn Becker</div>
+												<div class="resume-degree-time text-muted">Steven L. Neuberg (PI), Michael E. W. Varnum, & D. Vaughn Becker</div>
 												<div class="resume-degree-time text-muted">2020-2022</div>
 											</li>
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">[NSF] Fundamental Social Motives and Subjective Well-being Around the World</div>
-												<div class="resume-degree-org text-muted">Michael E. W. Varnum (PI) & Douglas T. Kenrick</div>
+												<div class="resume-degree-time text-muted">Michael E. W. Varnum (PI) & Douglas T. Kenrick</div>
 												<div class="resume-degree-time text-muted">2018-2021</div>
 											</li>
 										</ul>
