--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
 										<h3 class="text-uppercase resume-section-heading mb-3">Research Assistant</h3>
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-1">
-												<div class="resume-degree font-weight-bold">[NSF] RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health</div>
+												<div class="resume-degree font-weight-bold">
+													<span class = "bolded">[NSF] RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health</div>
 												<div class="resume-degree-time text-muted">Steven L. Neuberg (PI), Michael E. W. Varnum, & D. Vaughn Becker</div>
 												<div class="resume-degree-time text-muted">2020-2022</div>
 											</li>
@@ -260,6 +261,9 @@
 												<div class="resume-degree-time text-muted">2018-2021</div>
 											</li>
 										</ul>
+									</section>
+
+
 
 									<section class="skills-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-3">Language</h3>
