--- a/index.html
+++ b/index.html
@@ -252,17 +252,14 @@
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">
 													<span class = "bolded">[NSF] RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health</div>
-												<div class="resume-degree-time text-muted">Steven L. Neuberg (PI), Michael E. W. Varnum, & D. Vaughn Becker</div>
-												<div class="resume-degree-time text-muted">2020-2022</div>
+												<div class="resume-degree-time text-muted">Steven L. Neuberg (PI), Michael E. W. Varnum, & D. Vaughn Becker | 2020-2022</div>
 											</li>
 											<li class="mb-1">
-												<div class="resume-degree font-weight-bold">[NSF] Fundamental Social Motives and Subjective Well-being Around the World</div>
+												<div class="resume-degree font-weight-bold">[NSF] Fundamental Social Motives and Subjective Well-being Around the World |2018-2021</div>
 												<div class="resume-degree-time text-muted">Michael E. W. Varnum (PI) & Douglas T. Kenrick</div>
-												<div class="resume-degree-time text-muted">2018-2021</div>
 											</li>
 										</ul>
 									</section>
-
 
 
 									<section class="skills-section py-3">
