--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							</section><!--//education-section-->
 
 							<section class="award-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-3">Award</h3>
+								<h3 class="text-uppercase resume-section-heading mb-3">Honors & Award</h3>
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
@@ -251,15 +251,32 @@
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">
-													<span class = "bolded">[NSF] RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health</div>
-												<div class="resume-degree-time text-muted">Steven L. Neuberg (PI), Michael E. W. Varnum, & D. Vaughn Becker | 2020-2022</div>
+													<span class = "bolded">
+														[NSF] RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health</div>
+												<div class="resume-degree-time text-muted">
+													Steven L. Neuberg (PI), <br/>Michael E. W. Varnum, & <br/>D. Vaughn Becker<br/>| 2020-2022</div>
 											</li>
 											<li class="mb-1">
-												<div class="resume-degree font-weight-bold">[NSF] Fundamental Social Motives and Subjective Well-being Around the World |2018-2021</div>
-												<div class="resume-degree-time text-muted">Michael E. W. Varnum (PI) & Douglas T. Kenrick</div>
+												<div class="resume-degree font-weight-bold">
+													[NSF] Fundamental Social Motives and Subjective Well-being Around the World</div>
+												<div class="resume-degree-time text-muted">
+													Michael E. W. Varnum (PI) & <br/>Douglas T. Kenrick<br/>| 2018-2021</div>
 											</li>
 										</ul>
 									</section>
+
+									<section class="teaching-section py-3">
+										<h3 class="text-uppercase resume-section-heading mb-3">Teaching</h3>
+										<ul class="list-unstyled resume-education-list">
+											<li class="mb-1">
+												<div class="resume-degree font-weight-bold">
+													Social Psychology</div>
+												<div class="resume-degree-time text-muted">
+													2022 Fall</div>
+											</li>
+										</ul>
+									</section>
+
 
 
 									<section class="skills-section py-3">
