--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 							<section class="education-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">education</h3>
-								<div class="item mb-2">
+								<div class="item mb-2" style="padding-left: 10px;">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. Social Psychology, Arizona State University</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Tempe, AZ | 2017 - 2023</div>
@@ -87,7 +87,7 @@
 
 							<section class="award-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-3">Honors & Award</h3>
-								<div class="item mb-2">
+								<div class="item mb-2" style="padding-left: 35px;">
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
 											<strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
@@ -131,7 +131,7 @@
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
 										<div class="item-meta col-12 col-md-8 col-lg-6 text-muted text-start text-md-end">[2-year impact factor; Journal Citation Reports 2022]</div>
-										<div class="item-content" style="padding-left: 40px; text-indent: -25px;">
+										<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
 											<p>09. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (revision under review).
 												<strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>.
 												<i>PNAS (Proceedings of the National Academy of Science)</i>
@@ -177,7 +177,7 @@
 								<h3 class="text-uppercase resume-section-heading mb-3">paper SUBMITTED & IN PREPARATION</h3>
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
-										<div class="item-content" style="padding-left: 40px; text-indent: -25px;">
+										<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
 											<p>04. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong> , Pick, C. M., & Varnum, M. E. W. (submitted)
 												<strong>Sibling aggression is surprisingly common and sexually egalitarian</strong>.  </p>
 											<p>03. <strong>Ko, A.</strong>  & Neuberg, S. L. (paper fully drafted)
@@ -193,7 +193,7 @@
 
 							<section class="conference-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-3">Conference</h3>
-								<div class="item mb-3">
+								<div class="item mb-2" style="padding-left: 10;">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title">Symposium Organizing</h4>
 									</div>
