--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 							<section class="education-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">education</h3>
-								<div class="item mb-2" style="padding-left: 10px;">
+								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. Social Psychology, Arizona State University</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Tempe, AZ | 2017 - 2023</div>
@@ -87,7 +87,7 @@
 
 							<section class="award-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-3">Honors & Award</h3>
-								<div class="item mb-2" style="padding-left: 35px;">
+								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
 											<strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
@@ -193,7 +193,7 @@
 
 							<section class="conference-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-3">Conference</h3>
-								<div class="item mb-2" style="padding-left: 10;">
+								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title">Symposium Organizing</h4>
 									</div>
