--- a/index.html
+++ b/index.html
@@ -198,10 +198,9 @@
 										<h4 class="item-title">Symposium Organizing</h4>
 									</div>
 									<div class="item-content">
-										<p>Chair, “COVID, Disease Psychology, and Politics” (June, 2022). Human Behavior & Evolution Society Conference, Virtual.</p>
-										<ul class="resume-list">
-											<li>Speakers: Ahra Ko, Michael Bang Peterson, Lene Aarøe, Lei Fan.</li>
-										</ul>
+										<p>Chair, <strong>COVID, Disease Psychology, and Politics</strong> (June, 2022).
+											Human Behavior & Evolution Society Conference, Virtual.
+											<br/>Speakers: Ahra Ko, Michael Bang Peterson, Lene Aarøe, Lei Fan.</p
 									</div>
 								</div><!--//item-->
 							</section><!--//conference-section-->
