--- a/index.html
+++ b/index.html
@@ -250,15 +250,15 @@
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">
-													<span class = "bolded">
-														[NSF] RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health</div>
-												<div class="resume-degree-time text-muted">
+													<strong>
+														[NSF] RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health</strong></div>
+												<div class="resume-degree-time text-muted" style="padding-left: 5px;">
 													Steven L. Neuberg (PI), <br/>Michael E. W. Varnum, & <br/>D. Vaughn Becker<br/>| 2020-2022</div>
 											</li>
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">
 													[NSF] Fundamental Social Motives and Subjective Well-being Around the World</div>
-												<div class="resume-degree-time text-muted">
+												<div class="resume-degree-time text-muted" style="padding-left: 5px;">
 													Michael E. W. Varnum (PI) & <br/>Douglas T. Kenrick<br/>| 2018-2021</div>
 											</li>
 										</ul>
