--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 									</section>
 
 									<section class="teaching-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-3">Teaching</h3>
+										<h3 class="text-uppercase resume-section-heading mb-3">Instructor of Record</h3>
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">
@@ -276,16 +276,24 @@
 										</ul>
 									</section>
 
-
-
 									<section class="skills-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-3">Language</h3>
+										<h3 class="text-uppercase resume-section-heading mb-3">Diveristy, Equity, & Inclusion</h3>
 										<ul class="list-unstyled resume-lang-list">
-											<li class="mb-0">Korean, English, </li>
-											<li>R, SPSS, SAS, </li>
-											<li>HTML</li>
+											<li class="mb-0">The ENERGIZE Psychology Research Initiative,
+											The Women of HBES (Human Behavior & Evolution Society)</li>
 										</ul>
 									</section><!--//statistic-section-->
+
+									<section class="skills-section py-3">
+										<h3 class="text-uppercase resume-section-heading mb-3">Manuscript Review</h3>
+										<ul class="list-unstyled resume-lang-list">
+											<li class="mb-0">Journal of Personality and Social Psychology,
+												Psychological Science,
+												Journal of Social and Personal Relationships,
+												Journal of Happiness Studies,
+												Personality and Individual Differences</li>
+										</ul>
+									</section>
 
 									<section class="statistic-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-3">Quantitative Training</h3>
