--- a/index.html
+++ b/index.html
@@ -250,8 +250,7 @@
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">
-													<strong>
-														[NSF] RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health</strong></div>
+													[NSF] RAPID: Implications of Coronavirus for Prejudices, Cultural Change, and Health</div>
 												<div class="resume-degree-time text-muted" style="padding-left: 5px;">
 													Steven L. Neuberg (PI), <br/>Michael E. W. Varnum, & <br/>D. Vaughn Becker<br/>| 2020-2022</div>
 											</li>
